...
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="-\nPosts" />

                        <TextView
                            android:id="@+id/nbFollowersTextView"
                            android:layout_width="15dp"
                            android:layout_height="120dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="-\nFollowers" />

...
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="15dp">

                <Button
                    android:id="@+id/followButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Follow"
                    android:textColor="@color/colorPrimary"
                    android:visibility="invisible"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/editButton"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@color/colorPrimary"
                    android:text="Edit profile"
                    android:textColor="@color/cardview_light_background"
                    android:visibility="gone"
...
