<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/account_entry_avatar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/profile_picture"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_default_user" />

    <TextView
        android:id="@+id/account_entry_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/account_entry_avatar"
        app:layout_constraintTop_toTopOf="@+id/account_entry_avatar"
        tools:text="Username" />

    <TextView
        android:id="@+id/account_entry_acct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        app:layout_constraintBottom_toBottomOf="@+id/account_entry_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/account_entry_username"
        app:layout_constraintTop_toBottomOf="@id/account_entry_username"
        tools:text="\@username@domain.tld" />

</androidx.constraintlayout.widget.ConstraintLayout>