<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Name of the app. In most languages you won't want to change this. -->
    <string name="app_name">PixelDroid</string>

    <!-- Button to go to the user's profile -->
    <string name="menu_account">My Profile</string>

    <!-- Button to go to the settings -->
    <string name="menu_settings">Settings</string>
    <string name="invalid_domain">"Invalid domain"</string>
    <string name="registration_failed">"Could not register the application with this server"</string>
    <string name="browser_launch_failed">"Could not launch a browser, do you have one?"</string>
    <string name="auth_failed">"Could not authenticate"</string>
    <string name="verify_credentials">"Could not get user information"</string>
    <string name="token_error">"Error getting token"</string>
...
    <string name="instance_not_pixelfed_warning">"This doesn't seem to be a Pixelfed instance, so the app could break in unexpected ways."</string>
    <string name="instance_not_pixelfed_continue">"OK, continue anyway"</string>
    <string name="instance_not_pixelfed_cancel">"Cancel logging in"</string>
    <string name="title_activity_settings2">Settings</string>

    <!-- Theme Preferences: title of button -->
    <string name="theme_title">Application Theme</string>

    <!-- Theme Preferences: title of the settings section dedicated to themes -->
    <string name="theme_header">Theme</string>

    <!-- Theme Preferences: default option (follow the system theme) -->
    <string name="default_system">Default (Follows system)</string>

    <!-- Theme Preferences: light theme option -->
    <string name="light_theme">Light</string>
...
For more info about Pixelfed, you can check here: https://pixelfed.org"</string>
    <string name="domain_of_your_instance">Domain of your instance</string>
    <string name="connect_to_pixelfed">Connect to Pixelfed</string>
    <string name="login_connection_required_once">You need to be online to be able to add the first account and use PixelDroid :(</string>
    <string name="api_not_enabled_dialog">The API is not activated on this instance. Contact your administrator to ask them to activate it.</string>
    <!-- Drawer -->
    <string name="logout">Log out</string>
    <string name="add_account_name">Add Account</string>
    <string name="add_account_description">Add another Pixelfed Account</string>
    <!-- Post creation -->
    <plurals name="description_max_characters">
        <item quantity="one">"Description must contain %d character at most."</item>
        <item quantity="other">"Description must contain %d characters at most."</item>
    </plurals>
    <string name="upload_picture_failed">Picture upload error!</string>
    <string name="picture_format_error">Upload error: wrong picture format.</string>
    <string name="request_format_error">Upload error: bad request format</string>
    <string name="upload_post_failed">Post upload failed</string>
    <string name="upload_post_success">Post uploaded successfully</string>
    <string name="upload_post_error">Post upload error</string>
    <string name="description">Description…</string>
    <string name="post">Post</string>
    <string name="upload_next_step">Next step</string>
    <string name="add_details">Add some details</string>
    <string name="add_photo">Add a photo</string>
    <string name="post_image">One of the images in the post</string>
    <string name="switch_to_grid">Switch to grid view</string>
...
    <string name="access_token_invalid">The access token is invalid</string>
    <string name="default_nposts">-\nPosts</string>
    <string name="default_nfollowers">-\nFollowers</string>
    <string name="default_nfollowing">-\nFollowing</string>
    <string name="no_username">No Username</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="follow_requested">Follow Requested</string>
    <string name="dialog_message_cancel_follow_request">Cancel the follow request?</string>
    <string name="edit_profile">Edit profile</string>
    <!-- Search page -->
    <string name="search">Search</string>
    <string name="posts">POSTS</string>
...
